# AiryWaves1D

./: README.md  main.py  pyproject.toml
airy_waves/: drawer.py  init_helper.py  sim.py
tests/: test_airy_waves.py
